--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 * {
     box-sizing: border-box;
 }
+html {
+    scroll-behavior: smooth;
+    overflow-y: scroll;
+}
 .container {
     width: 1170px;
     height: 100%;
@@ -11,6 +15,12 @@
     display: flex;
     margin-left: -15px;
     margin-right: -15px;
+}
+.hide {
+    display: none;
+}
+.flex {
+    display: flex;
 }
 /* -=-=-=-=-=-=-==-=<< COLOMS >>-=-=-=-=-=-=-=-=- */
 .col-md-1 {
@@ -92,6 +102,11 @@
 
 
 /* -=-=-=-=-=-=-==-=<< HEADER >>-=-=-=-=-=-=-=-=- */
+header {
+    top: 0;
+    position: sticky;
+    z-index: 10;
+}
 .header-bg {
     height: 81px;
     width: 100%;
@@ -167,14 +182,14 @@ main>div+div {
     padding-bottom: 100px;
 }
 /* -=-=-=-=-=-=-==-=<< MAIN_MARKETPLACE >>-=-=-=-=-=-=-=-=- */
-.marketplace {
+#marketplace {
     width: 100%;
     height: 660px;
     background-image: url(images/img\ \(2\).png);
     background-position: center;
     background-size: cover;
 }
-.marketplace .container {
+#marketplace .container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -189,7 +204,7 @@ main>div+div {
     color: white;
     border-color: #4e5a62;
 }
-.marketplace .headline-light {
+#marketplace .headline-light {
     border: none;
     padding-left: 0px;
     margin-top: 0px;
@@ -205,7 +220,7 @@ main>div+div {
 .flex-row {
     display: flex;
 }
-.marketplace .flex-row {
+#marketplace .flex-row {
     margin-top: 40px;
 }
 .marketplace-button {
@@ -243,7 +258,7 @@ main>div+div {
     background-color: white;
 }
 /* -=-=-=-=-=-=-==-=<< MAIN_MODEST >>-=-=-=-=-=-=-=-=- */
-.modest {
+#modest {
     background-color: white;
     border-bottom: 1px solid #dde1e4;
 }
@@ -252,7 +267,7 @@ main>div+div {
     border-color: #e1e6ea;
 }
 
-.modest .col-md-7 .little-text + .little-text {
+#modest .col-md-7 .little-text + .little-text {
     margin-top: 30px;
     margin-bottom: 50px;
 }
@@ -293,7 +308,7 @@ main>div+div {
     margin-top: 5px;
 }
 /* -=-=-=-=-=-=-==-=<< MAIN_TEAM >>-=-=-=-=-=-=-=-=- */
-.team {
+#team {
     background-color: white;
 }
 
@@ -361,17 +376,17 @@ main>div+div {
 .team-text .little-text {
     color: #8d8f92;
 }
-.team .image:hover p {
+#team .image:hover p {
     color: white;
 }
 /* -=-=-=-=-=-=-==-=<< MAIN_LOVELY >>-=-=-=-=-=-=-=-=- */
-.lovely {
+#lovely {
     background-color: #3a454d;
 }
-.lovely .headline-light {
+#lovely .headline-light {
     margin-top: 0px;
 }
-.lovely .row {
+#lovely .row {
     margin-bottom: 30px;
     flex-wrap: wrap;
 }
@@ -444,15 +459,15 @@ main>div+div {
     border-color: #23b7a4;
 }
 /* -=-=-=-=-=-=-==-=<< MAIN_WHAT >>-=-=-=-=-=-=-=-=- */
-.what {
+#what {
     background-color: white;
 }
-.what .row {
+#what .row {
     flex-wrap: wrap;
     align-content: space-between;
     text-align: center;
 }
-.what .little-text {
+#what .little-text {
     margin-bottom: 64px;;
 }
 
@@ -480,14 +495,14 @@ main>div+div {
     margin: 30px;
 }
 /* -=-=-=-=-=-=-==-=<< MAIN_FEATURES >>-=-=-=-=-=-=-=-=- */
-.features {
+#features {
     background-color: #3a454d;
 }
-.features .row {
+#features .row {
     flex-wrap: wrap;
 }
 
-.features .headline-light {
+#features .headline-light {
     margin: 0px;
 }
 
@@ -511,12 +526,16 @@ main>div+div {
     margin-bottom: 25px;
 }
 /* -=-=-=-=-=-=-==-=<< MAIN_TOUCH >>-=-=-=-=-=-=-=-=- */
-.touch {
-    background-color: white;
-    background-image: url(images/img\ \(1\).png);
-    background-repeat: no-repeat;
-    background-position-y: 180px;
-    background-position-x: center;
+#touch {
+    position: relative;
+    height: 902px;
+}
+
+.map {
+    height: 346px;
+    position: absolute;
+    z-index: -1;
+    bottom: 376px;
 }
 
 .touch-tittle {
@@ -524,38 +543,37 @@ main>div+div {
     margin-top: 405px;
 }
 
-.touch .little-text {
+#touch .little-text {
     margin-top: 30px;
 }
 
-.touch form {
-    display: flex;
+.touch-form {
     flex-wrap: wrap;
     background-color: white;
     margin-top: 217px;
     padding: 30px;
 }
 
-form p {
+#touch form p {
     color: #8d8f92;
     margin-bottom: 7px;
 }
 
-form input {
+#touch form input {
     width: 240px;
     height: 44px;
     background-color: #eaeef1;
     border: 2px solid #eaeef1;
     border-radius: 4px;
 }
-form input[type="text"] {
+#touch form input[type="text"] {
     margin-right: 15px;
 }
-form .row, form textarea{
+#touch form .row, form textarea{
     margin-bottom: 30px;
 }
 
-form textarea {
+#touch form textarea {
     width: 495px;
     height: 159px;
     background-color: #eaeef1;
@@ -563,7 +581,7 @@ form textarea {
     border-radius: 4px;
 }
 
-.touch-button {
+[class*="touch-button"] {
     width: 151px;
     height: 44px;
     background-color: #23b7a4;
@@ -575,13 +593,19 @@ form textarea {
     cursor: pointer;
     user-select: none;
 }
-.touch-button:hover {
+[class*="touch-button"]:hover {
     background-color: #187a6d;
     border-color: #187a6d;
 }
 
-
-
+#touch .col-md-6 + .col-md-6 {
+    position: relative;
+}
+.touch-button-leave {
+    position: absolute;
+    bottom: 19px;
+    left: 45px;
+}
 /* -=-=-=-=-=-=-==-=<< FOOTER >>-=-=-=-=-=-=-=-=- */
 .footer {
     background-color: #3a454d;
@@ -614,6 +638,77 @@ form textarea {
     width: 100%;
     height: 100%;
 }
+/* -=-=-=-=-=-=-==-=<< MODAL >>-=-=-=-=-=-=-=-=- */
+.modal {
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(255,255,255,0.4);
+    z-index: 20;
+}
+.modal-block {
+    user-select: none;
+    position: relative;
+    width: 400px;
+    background-color: #3a454d;
+    border-radius: 10px;
+    padding: 40px 20px 20px;
+}
+.close {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #1f2529;
+    background-color: #23b7a4;
+    border: solid 5px #23b7a4;
+    border-radius: 10px;
+}
+.close:hover {
+    background-color: white;
+    color: #187a6d;
+    border-color: white
+}
+.modal h1 {
+    color:white;
+}
+.modal p {
+    color:#23b7a4;
+    margin: 15px 5px 5px;
+}
+.modal input {
+    color: white;
+    width: 100%;
+    height: 40px;
+    background-color: rgba(0,0,0,0);
+    border: solid 5px #23b7a4;
+    border-radius: 10px;
+}
+.modal .flex {
+    width: 100%;
+    justify-content: center;
+}
+.modal-button {
+    cursor: pointer;
+    text-align: center;
+    line-height: 20px;
+    width: 70px;
+    height: 30px;
+    color: #1f2529;
+    background-color: #23b7a4;
+    border: solid 5px #23b7a4;
+    border-radius: 10px;
+    margin-top: 15px;
+}
+.modal-button:hover {
+    background-color: white;
+    color: #187a6d;
+    border-color: white
+}
 
 
 
@@ -639,19 +734,19 @@ form textarea {
     .header-bg .px14 {
         font-size: 12px;
     }
-    .modest .px18 {
+    #modest .px18 {
         font-size: 14px;
     }
-    .team .little-text {
+    #team .little-text {
         font-size: 14px;
     }
-    .features .little-text {
+    #features .little-text {
         font-size: 14px;
     }
-    .features .px18 {
+    #features .px18 {
         font-size: 16px;
     }
-    .touch .px14 {
+    #touch .px14 {
         font-size: 12px;
     }
 /* Header.logo */
@@ -675,7 +770,7 @@ form textarea {
         height: 230px;
     }
 /* Main.lovely */
-    .lovely {
+    #lovely {
         height: 800px;
     }
     .lovely-blank {
@@ -725,28 +820,28 @@ form textarea {
     .header-bg .px14 {
         font-size: 10px;
     }
-    .marketplace .px14 {
+    #marketplace .px14 {
         font-size: 12px;
     }
-    .modest .px18 {
+    #modest .px18 {
         font-size: 10px;
     }
-    .modest .px20 {
+    #modest .px20 {
         font-size: 16;
     }
-    .team .px16 {
+    #team .px16 {
         font-size: 12px;
     }
-    .lovely .px18 {
+    #lovely .px18 {
         font-size: 14px;
     }
-    .what .px17 {
+    #what .px17 {
         font-size: 13px;
     }
-    .features .px18 {
+    #features .px18 {
         font-size: 12px;
     }
-    .touch .px14 {
+    #touch .px14 {
         font-size: 12px;
     }
 /* Header */
@@ -772,13 +867,13 @@ form textarea {
         font-size: 10px;
     }
 /* Main.marketplace */
-    .marketplace {
+    #marketplace {
     height: 460px;
     }
     [class*="headline-"] {
         margin-bottom: 35px;
     }
-    .marketplace .flex-row {
+    #marketplace .flex-row {
         margin-top: 25px;
     }
     .marketplace-button {
@@ -787,14 +882,14 @@ form textarea {
         line-height: 38px;
     }
 /* Main.modest */
-    .modest {
+    #modest {
         height: 412px;
     }
-    .modest .col-md-7 .little-text + .little-text {
+    #modest .col-md-7 .little-text + .little-text {
         margin-top: 20px;
         margin-bottom: 30px;
     }
-    .modest .col-md-1 {
+    #modest .col-md-1 {
         padding-left: 10px;
         padding-right: 10px;
     }
@@ -814,7 +909,7 @@ form textarea {
         margin-right: 3px;
     }
 /* Main.lovely */
-    .lovely {
+    #lovely {
         height: 600px;
     }
     .lovely-blank {
@@ -835,7 +930,7 @@ form textarea {
         margin: 20px;
     }
 /* Main.features */
-    .features {
+    #features {
         height: 532px;
     }
     [class*="image-features-"] {
@@ -843,20 +938,20 @@ form textarea {
         margin-bottom: 20px;
     }
 /* Main.touch */
-    .touch {
+    #touch {
         height: 700px;
     }
     .touch-tittle {
         margin-top: 425px;
     }
-    .touch .little-text {
+    #touch .little-text {
         margin-top: 20px;
     }
     form input {
         height: 30px;
         width: 260px;
     }
-    .touch textarea {
+    #touch textarea {
         height: 100px;
     }
 }
@@ -874,22 +969,22 @@ form textarea {
         font-size: 8px ;
         line-height: 10px;
     }
-    .marketplace .px14 {
+    #marketplace .px14 {
         font-size: 10px;
     }
-    .modest .px20 {
+    #modest .px20 {
         font-size: 14px;
     }
-    .team .little-text {
+    #team .little-text {
         font-size: 10px;
     }
-    .lovely .px14 {
+    #lovely .px14 {
         font-size: 10px;
     }
-    .lovely .px18 {
+    #lovely .px18 {
         font-size: 9px;
     }
-    .features .px18 {
+    #features .px18 {
         font-size: 15px;
     }
     .footer .px14 {
@@ -917,14 +1012,14 @@ form textarea {
         font-size: 0px;
     }
 /* Main.marketplace */
-    .marketplace {
+    #marketplace {
     height: 380px;
     }
     [class*="headline-"] {
         margin-top: 60px;
         margin-bottom: 20px !important; 
     }
-    .marketplace .flex-row {
+    #marketplace .flex-row {
         display: block;
         margin-top: 20px;
     }
@@ -935,7 +1030,7 @@ form textarea {
         margin-bottom: 5px;
     }
 /* Main.modest */
-    .modest {
+    #modest {
         height: 412px;
     }
     .modest-button {
@@ -945,11 +1040,11 @@ form textarea {
         margin-top: 20px;
         margin-bottom: 8px;
     }
-    .modest .col-md-7 .little-text + .little-text {
+    #modest .col-md-7 .little-text + .little-text {
         margin-top: 15px;
         margin-bottom: 20px;
     }
-    .modest .col-md-1 {
+    #modest .col-md-1 {
         padding-left: 0px;
         padding-right: 0px;
     }
@@ -960,13 +1055,13 @@ form textarea {
         line-height: 25px;
     }
 /* Main.team */
-    .team {
+    #team {
         padding-bottom: 40px;
     }
-    .team .row {
+    #team .row {
         flex-wrap: wrap;
     }
-    .team .col-md-3 {
+    #team .col-md-3 {
         width: 50%;
         margin-bottom: 20px;
     }
@@ -985,11 +1080,11 @@ form textarea {
         padding: 15px;
     }
 /* Main.lovely */
-    .lovely {
+    #lovely {
         height: 500px;
         padding-top: 60px;
     }
-    .lovely .col-md-4 {
+    #lovely .col-md-4 {
         width: 50%;
     }
     .lovely-blank {
@@ -1011,60 +1106,61 @@ form textarea {
         margin-left: -58px;
     }
 /* Main.what */
-    .what .col-md-3 {
+    #what .col-md-3 {
         width: 50%;
     }
-    .what .headline-dark {
+    #what .headline-dark {
         margin-bottom: 40px !important;
     }
-    .what-tittle {
+    #what-tittle {
         margin: 20px;
     }
-    .what .little-text {
+    #what .little-text {
         margin-bottom: 20px;
     }
 /* Main.features */
-    .features {
+    #features {
         height: 1100px;
         padding-top: 40px;
     }
-    .features .col-md-4 {
+    #features .col-md-4 {
         width: 100%;
     }
     [class*="image-features-"] {
         height: 160px;
         margin-top: 30px;
     }
-    .features .little-text {
+    #features .little-text {
         line-height: 15px;
     }
 /* Main.touch */
-    .touch {
+    #touch {
         height: 550px;
         background-position-y: 80px;
         background-size: 400%;
     }
-    .touch .headline-dark {
+    #touch .headline-dark {
         margin-top: 40px;
         margin-bottom: 0;
     }
     .touch-tittle {
         margin-top: 300px;
     }
-    .touch form {
+    #touch form {
         padding: 10px;
     }
-    .touch form .col-md-6 {
+    #touch form .col-md-6 {
         width: 100%;
     }
     form input {
         height: 20px;
         width: 100%;
     }
-    .touch textarea {
+    #touch textarea {
         height: 50px;
+        resize: none;
     }
-    .touch .row {
+    #touch .row {
         margin-bottom: 10px;
     }
 /* Footer */
